registe login done register without succes message, before npm run watch

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,9 @@
             {{ include('blocks/header.html.twig') }}
         {% endblock %}
 
-
+        {% for flash in app.flashes('success') %}
+            <div class="alert alert-success">{{ flash }}</div>
+        {% endfor %}
 
         {% block body %}{% endblock %}
 
