--- a/templates/blocks/header.html.twig
+++ b/templates/blocks/header.html.twig
@@ -7,7 +7,7 @@
                     <div class="header__content">
                         <!-- header logo -->
                         <a href="/" class="header__logo">
-                            <img src="/img/logo.svg" alt="">
+                            <img src="./assets/img/logo.svg" alt="">
                         </a>
                         <!-- end header logo -->
 
@@ -18,8 +18,8 @@
                                 <a class="dropdown-toggle header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
 
                                 <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuHome">
-                                    <li><a href="index.html">Home slideshow bg</a></li>
-                                    <li><a href="index2.html">Home static bg</a></li>
+                                    <li><a href="/">Home slideshow bg</a></li>
+
                                 </ul>
                             </li>
                             <!-- end dropdown -->
