--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,20 +2,70 @@
 
 {% block title %}Register{% endblock %}
 
+
+
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+
+
+    <div class="sign section--bg" data-bg="./assets/img/section/section.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="sign__content">
+                        <!-- registration form -->
+
+
+
+
+
+
+                        {{ form_start(registrationForm, {'attr' : {'class' : 'sign__form'}}) }}
+
+                            <a href="/" class="sign__logo">
+                                <img src="./assets/img/logo.svg" alt="">
+                            </a>
+
+                            <div class="sign__group">
+                                {{ form_widget(registrationForm.name) }}
+                            </div>
+
+                            <div class="sign__group">
+                                {{ form_widget(registrationForm.email) }}
+                            </div>
+
+                            <div class="sign__group">
+                                {{ form_widget(registrationForm.plainPassword) }}
+                            </div>
+
+{#                            <div class="sign__group sign__group--checkbox">#}
+{#                                <input id="remember" name="remember" type="checkbox" checked="checked">#}
+{#                                <label for="remember">I agree to the <a href="#">Privacy Policy</a></label>#}
+{#                            </div>#}
+
+                            <button type="submit" class="sign__btn">Register</button>
+
+                            <span class="sign__text">Already have an account? <a href="/login">Sign in!</a></span>
+
+
+                        {{ form_end(registrationForm) }}
+
+
+
+
+                        <!-- registration form -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
     <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+
 {% endblock %}
+
