--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -55,7 +55,7 @@
                                     <span class="card__category">
 										<a href="#">{{  movie.title }}</a>
 									</span>
-                                    <span class="card__rate"><i class="icon ion-ios-star"></i>8.4</span>
+                                    <span class="card__rate"><i class="icon ion-ios-star"></i>{{  movie.avg_rate }}</span>
                                 </div>
                             </div>
                             <!-- end card -->
