--- a/templates/blocks/header.html.twig
+++ b/templates/blocks/header.html.twig
@@ -22,35 +22,17 @@
 
                             <!-- dropdown -->
                             <li class="header__nav-item">
-                                <a class="dropdown-toggle header__nav-link" href="#" role="button" id="dropdownMenuCatalog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catalog</a>
+                                <a class="dropdown-toggle header__nav-link" href="/catalog" role="button" id="dropdownMenuCatalog" >Catalog</a>
 
-                                <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuCatalog">
-                                    <li><a href="catalog1.html">Catalog Grid</a></li>
-                                    <li><a href="catalog2.html">Catalog List</a></li>
-                                    <li><a href="details1.html">Details Movie</a></li>
-                                    <li><a href="details2.html">Details TV Series</a></li>
-                                </ul>
+
                             </li>
                             <!-- end dropdown -->
 
-                            <li class="header__nav-item">
-                                <a href="pricing.html" class="header__nav-link">Pricing Plan</a>
-                            </li>
-
-                            <li class="header__nav-item">
-                                <a href="faq.html" class="header__nav-link">Help</a>
-                            </li>
 
                             <!-- dropdown -->
                             <li class="dropdown header__nav-item">
                                 <a class="dropdown-toggle header__nav-link header__nav-link--more" href="#" role="button" id="dropdownMenuMore" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon ion-ios-more"></i></a>
 
-                                <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuMore">
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="/login">Sign In</a></li>
-                                    <li><a href="/register">Sign Up</a></li>
-                                    <li><a href="404.html">404 Page</a></li>
-                                </ul>
                             </li>
                             <!-- end dropdown -->
                         </ul>
@@ -68,6 +50,17 @@
                             </a>
                         </div>
                         <!-- end header auth -->
+
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <!-- header auth -->
+
+                                <a href="/admin" class="header__sign-in">
+                                    <i class="icon ion-ios-log-in"></i>
+                                    <span>Admin panel</span>
+                                </a>
+
+                            <!-- end header auth -->
+                        {% endif %}
 
                         <!-- header menu btn -->
                         <button class="header__btn" type="button">
@@ -88,9 +81,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="header__search-content">
-                        <input type="text" placeholder="Search for a movie, TV Series that you are looking for">
+                        <input id="search_input" type="text" placeholder="Search for a movie">
 
-                        <button type="button">search</button>
+                        <button id="search_button" type="button">search</button>
                     </div>
                 </div>
             </div>
