--- a/templates/movie_detail/index.html.twig
+++ b/templates/movie_detail/index.html.twig
@@ -42,13 +42,6 @@
                                 </li>
                                 <!-- end dropdown -->
 
-                                <li class="header__nav-item">
-                                    <a href="pricing.html" class="header__nav-link">Pricing Plan</a>
-                                </li>
-
-                                <li class="header__nav-item">
-                                    <a href="faq.html" class="header__nav-link">Help</a>
-                                </li>
 
                                 <!-- dropdown -->
                                 <li class="dropdown header__nav-item">
@@ -78,6 +71,17 @@
                             </div>
                             <!-- end header auth -->
 
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <!-- header auth -->
+
+                                <a href="/admin" class="header__sign-in">
+                                    <i class="icon ion-ios-log-in"></i>
+                                    <span>Admin panel</span>
+                                </a>
+
+                                <!-- end header auth -->
+                            {% endif %}
+
                             <!-- header menu btn -->
                             <button class="header__btn" type="button">
                                 <span></span>
@@ -97,9 +101,9 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="header__search-content">
-                            <input type="text" placeholder="Search for a movie, TV Series that you are looking for">
+                            <input id="search_input" type="text" placeholder="Search for a movie">
 
-                            <button type="button">search</button>
+                            <button id="search_button" type="button">search</button>
                         </div>
                     </div>
                 </div>
